# RSS-2019

./: .gitignore  README.md  turtlebot3_rssmap_world.launch
RSS-2019/: CMakeLists.txt  package.xml
collision_avoidance/: CMakeLists.txt  package.xml
collision_avoidance/scripts/: #navigate.py#  avoid.py  navigate.py  navigate2.py
milestone2/: CMakeLists.txt  package.xml
milestone2/config/: poi.json
milestone2/launch/: particle_avoid.launch
milestone2/maps/: data.json  rss.json  rss_offset.json  rss_offset_box1.json  rss_offset_box2.json
milestone2/msg/: Goal.msg  Task.msg
milestone2/results/: buttontest.json  buttontest.py  ik.json  ik.py  log_0.1_0.05_10.0_0.05.json  log_sim2.json
milestone2/scripts/: armcontrol.py  avoid.py  controller.py  eval.py  evalAC.py  ik.py  ik_pub_only.py  ik_v02.py  particle.py  particle_avoid.launch  particle_test.py  purePursuit.py  robot.py  rrt.py  run.py  srvTest.py  utile.py
milestone2/srv/: RRTsrv.srv
px100/px100_description/: CMakeLists.txt  package.xml
px100/px100_description/urdf/: px100.urdf.xacro
rss_gazebo/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
rss_gazebo/launch/: rss.launch  test.launch
rss_gazebo/worlds/: empty.world  real_rss.world  real_rss_box1.world  rssmap.world
rss_gazebo/worlds/real_rss.map/: model.config  model.sdf
rss_gazebo/worlds/rss_box1/: model.config  model.sdf
