<?xml version="1.0"?>
<package format="2">
  <name>RSS-2019</name>
  <version>0.0.0</version>
  <description>
    ROS packages for the RSS-2019 class (meta package)
  </description>
  <license>TODO</license>
  <author email="todo@hw.ac.uk">Andreas</author>
  <author email="todo@hw.ac.uk">Liam</author>
  <author email="pon1@hw.ac.uk">Pierre</author>
  <maintainer email="todo@todo.com">todo</maintainer>
  <url type="repository">https://github.com/NicolayP/RSS-2019</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rss_gazebo</exec_depend>
  <exec_depend>px100</exec_depend>
  <export><metapackage/></export>
</package>
