<?xml version="1.0"?>
<package format="2">
  <name>rss_gazebo</name>
  <version>0.0.0</version>
  <description>The rss_gazebo package</description>
  <maintainer email="pierre@todo.todo">pierre</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <exec_depend>px100_description</exec_depend>
  <exec_depend>xacro</exec_depend> 

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
